--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,11 +21,11 @@ jobs:
     - name: Set up Android SDK
       uses: android-actions/setup-android@v2
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew
+    - name: Set up Gradle
+      uses: gradle/gradle-build-action@v2
 
     - name: Build with Gradle
-      run: ./gradlew assembleDebug
+      run: gradle assembleDebug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
